# MonoTempo

./: .env  .gitignore  .gitmodules  DOING  README.md  apply_patch_docker_compose  autocommit  build  create_patch_docker_compose  docker-compose.yml  dockerdel  fix_file_permissions  install  mytempo.sql  mytempo_minipc.sql  pu  setup  setup-docker  shared.env  shared.env.in
API/: Dockerfile  go.mod  main.go
Datemon/: Dockerfile  datemon.sh
Net/: net.env.in
NetworkManager-config/dev/: Wifi.nmconnection  nmconnect.c  wifi
NetworkManager-config/system-connections/: Hotspot.nmconnection  Wifi.nmconnection  wired.nmconnection
Offline/: docker-compose.yml  setup.offline  setup_single.offline  stop.offline  stop_single.offline
Offline/AA2/: Dockerfile  aa2.env  action.go  alt_action.go  build.sh  consts.go  go.mod  go.sum  install  main.go  process.go  receive.go  types.go
Offline/Envio/: Dockerfile  Makefile  README.md  atleta.go  consts.go  database.go  file.go  go.mod  go.sum  lote.go  main.go  process.go  types.go
Offline/MyReader/: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  consumer.py  monitor  myconfig.py  requirements.txt  server.py  test.py
Offline/MyReader/mytempo-chafon-reader/: .gitignore  .gitmodules  CMakeLists.txt  README  build.sh  ideas.md
Offline/MyReader/mytempo-chafon-reader/app/: CMakeLists.txt  chafon_reader.cpp
Offline/MyReader/mytempo-chafon-reader/cmake/: initpython.cmake  submodules.cmake
Offline/MyReader/mytempo-chafon-reader/include/chafon_reader/config/: config.h  definitions.h  definitions.h.in
Offline/MyReader/mytempo-chafon-reader/include/chafon_reader/reader/: reader.hpp
Offline/MyReader/mytempo-chafon-reader/include/chafon_reader/tag/: tag_monitor.hpp  tag_processor.hpp
Offline/MyReader/mytempo-chafon-reader/python/: CMakeLists.txt  pychafon.cpp  pychafon.hpp  pychafon.py
Offline/MyReader/mytempo-chafon-reader/src/: CMakeLists.txt
Offline/MyReader/mytempo-chafon-reader/src/chafon_reader_api/: CMakeLists.txt
Offline/MyReader/mytempo-chafon-reader/src/chafon_reader_api/reader/: reader.cpp
Offline/MyReader/mytempo-chafon-reader/src/chafon_reader_api/tag/: tag_monitor.cpp  tag_processor.cpp
Online/: build.online  docker-compose.yml  setup.online
Online/Process-Athletes/: Dockerfile  README.md  config.py  func.py  processa_atletas.py  querys.py  run.py  setup.py
Online/Receba/: Dockerfile  README.md  atletas.go  const.go  db.go  equipamento.go  go.mod  go.sum  info.go  limpar.go  main.go  percurso.go  prova.go  queries.go  request.go  staff.go  types.go
Online/Reenvio/: Dockerfile  README.md  atleta.go  db.go  envio.go  equip.go  go.mod  go.sum  main.go  reenvio.go  reenvio_loop.go  request.go  upload.go  utils.go
Php/: Dockerfile  supervisord.conf
System/: chancelor  provost
database/: N0.db  N1.db  N10.db  N111.db  N12.db  N13.db  N14.db  N15.db  N16.db  N17.db  N18.db  N19.db  N20.db  N21.db  N22.db  N23.db  N24.db  N25.db  N26.db  N27.db  N28.db  N29.db  N3.db  N30.db  N31.db  N32.db  N33.db  N34.db  N35.db  N36.db  N37.db  N38.db  N43.db  N45.db  N46.db  N47.db  N48.db  N5.db  N50.db  N51.db  (+26 more)
mysql/: fix_file_permissions  my.cnf  mytempo.sql
openbsd/: hostname.urtwn0  hostname.vether0  pf.conf  vm.conf
patches/: docker-compose-aa2_env2.yml.patch  docker-compose-aa2sql.yml.patch  docker-compose-kerloPA.yml.patch  docker-compose-new.yml.patch
schemas/: equipamento.sql
(+50 files in other folders)
